fix text-wrap for headers on overview (fixes #139)

--- a/freevle/tmp-design/static/css/content.scss
+++ b/freevle/tmp-design/static/css/content.scss
@@ -514,6 +514,7 @@ nav#subjectoverview {
 
       h3 {
         margin: 0.5em 0;
+        word-wrap:break-word;
       }
 
       ul {
